# langgraph-playground

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
.agents/skills/simulated-agent-bootstrap/: SKILL.md
.agents/skills/simulated-agent-implementation-review/: SKILL.md
docs/agent-patterns/: OVERVIEW.md  README.md  convention-simulated-agents-may-favor-learning-clarity-over-production-consistency.md  langgraph-implementation-fluency-turning-requirements-into-graph-design.md
simulated_agents/: AGENTS.md  README.md  __init__.py  settings.py
simulated_agents/debate_council/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
simulated_agents/editor_in_chief_review_loop/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
simulated_agents/implementation_gap_interviewer/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
simulated_agents/mbti/: README.en.md  README.md  README.reference.md  __init__.py  graph.py  swarm_reference.py
simulated_agents/missing_info_interviewer/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
simulated_agents/reducer_playground/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
simulated_agents/study_coach/: README.en.md  README.md  graph.py
simulated_agents/support_ticket_router/: FEEDBACK.md  README.en.md  README.md  __init__.py  graph.py  graph_reference.py
tests/: test_mbti_swarm_reference.py  test_settings.py
(+27 files in other folders)
