[project]
name = "langgraph-playground"
version = "0.1.0"
description = "Standalone LangGraph learning playground for simulated-agent patterns."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.4",
    "langgraph-swarm>=0.1.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
